data/derived/sp14/progs/unify/prog0241.ml.out
Characters 217-303:
  adder ( mulByDigit i (List.rev (List.map (fun x->x*10) t )) ) @ (helper [] (h*i) @ []);;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int list list
       Type int is not compatible with type int list 
